--- a/views/battleships.erb
+++ b/views/battleships.erb
@@ -7,10 +7,6 @@
 		</form>
 	</div>
 
-	<div id="board">
-		 <canvas id="maincanvas" width="900" height="500"></canvas>
-	</div>
-
 	<% if @error.nil? %>			
 		Game state: <%= session['gamestate'] %><br>
 		Current player number: <%= session['current_player_number'] + 1 %><br>
@@ -18,53 +14,85 @@
 
 		<script type="text/javascript">
 
-			var random_sea = ['#006699', '#006994', '#008294', '#005d94', '#007594'];
-			var tile_width = 50;
-			var tile_height = 50;
+			var WIDTH = 1000;
+			var HEIGHT = 700;
+			
+			var bgcolor = 0xffffff;
+			var stage = new PIXI.Stage(bgcolor);
+			var renderer = PIXI.autoDetectRenderer(WIDTH, HEIGHT);
+			document.body.appendChild(renderer.view);
+			var loader = new PIXI.AssetLoader(['tiles.json']);
 
-			function drawtile(tile_x, tile_y, state) {
+			var ship = isoTile('road.png');
+			var water = isoTile('water.png');
+			var tiles = [ship, water];
 
-				var tilesheet = new sheetengine.BaseSheet({x:tile_x, y:tile_y, z:0}, 
-												     {alphaD:90, betaD:0, gammaD:0}, 
-													 {w:tile_width, h:tile_height});
+			var tileWidth = 50;
+			var tileHeight = 50;
 
-				switch(state) {
-					case "V":
-						tilesheet.color = '#303030';
-						break;
-					case "H":
-						tilesheet.color = '#303030';
-						break;
-					case "D":
-						tilesheet.color = '#FFCC00';
-						break;
-					default:
+			function drawMap(rowdata, size, xOffset, yOffset) {
+    
+			    var tileType, x, y, isoX, isoY, idx;
 
-						var num = Math.floor(Math.random() * random_sea.length)
-						tilesheet.color = random_sea[num];
-						break;
-				}
+			    console.log("Size " + size);
+
+			    // Process rows first
+			    for (var i = 1, iL = size; i < iL; i++) {
+			        
+			        var cols = rowdata[i];
+			        console.log(cols);
+
+			        for (var j = 0, jL = cols.length; j < jL; j++) {
+
+			            x = j * tileWidth;
+			            y = i * tileHeight;
+
+
+			            // iso coordinate
+			            isoX = x - y;
+			            isoY = (x + y) / 2;
+
+			            tileType = cols[j];
+
+			            if (tileType != " ") {
+                			console.log("Tile type [" + tileType + "]");
+
+                			if (tileType == "V") {
+								drawTile = tiles[0];                				
+								drawTile(isoX + xOffset, isoY + yOffset);
+                			}
+
+							if (tileType == "H") {
+								drawTile = tiles[0];                				
+								drawTile(isoX + xOffset, isoY + yOffset);
+                			}                			
+
+			            } else {
+			            	drawTile = tiles[1];                				
+							drawTile(isoX + xOffset, isoY + yOffset);
+			            }
+
+			         }
+			    }
 			}
 
-			function drawrow(y, coldata) {
 
-				console.log(coldata.length)
-				var num = coldata.length;
-				var x = -120;
+			function isoTile(filename) {
 
-				// Draw bottom (left -> right)
-				for (var n = 0; n < num; n++) {
+				console.log("filename " + filename);
+			  return function(x, y) {
+			    var tile = PIXI.Sprite.fromFrame(filename);
+			    tile.position.x = x;
+			    tile.position.y = y;
 
-					drawtile(x, y, coldata[n]);
-					x += tile_height + 1;
-				}
-			}			
-
+			    // bottom-left
+			    tile.anchor.x = 0;
+			    tile.anchor.y = 1;
+			    stage.addChild(tile);
+			  }
+			}
 
 			$(document).ready(function() {
-
-				var canvasElement = document.getElementById('maincanvas');
-				sheetengine.scene.init(canvasElement, {w:1100,h:800});
 
 				$.getJSON("/board/<%= session['gameid'] %>/player/<%= session['current_player_number'] %>", 
 
@@ -76,29 +104,20 @@
 						var size = board["size"] + 1;
 						var rowdata = board["rows"];
 
-						for (var i = 1;  i < size; i++) {
+						loader.onComplete = start;
+						loader.load();
 
-							var coldata = rowdata[i]; 
-							drawrow(y, coldata);
-							y+= tile_width + 1;
+						function start() {
+
+						  drawMap(rowdata, size, WIDTH / 2, tileHeight * 1.5);
+
+						  function animate() {
+						    requestAnimFrame(animate);
+						    renderer.render(stage);
+						  }
+						  requestAnimFrame(animate);
 						}
 
-						sheetengine.calc.calculateAllSheets();
-						sheetengine.drawing.drawScene(true);
-
-						var sheet = new sheetengine.Sheet({x:-120,y:-250,z:0}, 
-														  {alphaD:0,betaD:0,gammaD:0}, 
-														  {w:50,h:50});
-						var img = new Image();
-						img.onload = function() {
-							sheet.context.drawImage(img, 0,0);
-
-							sheetengine.calc.calculateChangedSheets();
-							sheetengine.drawing.drawScene(true);
-						};
-
-						img.src = 'images/grass.png'; 
-						
 					}
 				);
 			});
