--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,8 @@
      <link rel=stylesheet type="text/css" href="/main.css"></link>
      <script src="http://code.jquery.com/jquery-2.0.0.js"></script>
      <script src="sheetengine.js"></script>
+     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+     <script src="gf.js" type="text/javascript"></script>
    </head>
 
    <div class="wrapper">
