--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,11 +5,16 @@
    <head>  
      <meta charset="utf8">  
      <title>Battleships</title>  
-     <link rel=stylesheet type="text/css" href="/main.css"></link>
-     <script src="http://code.jquery.com/jquery-2.0.0.js"></script>
-     <script src="sheetengine.js"></script>
-     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-     <script src="gf.js" type="text/javascript"></script>
+
+     <link rel=stylesheet type="text/css" href="main.css"></link>
+     <link rel="stylesheet" href="bootstrap.min.css">
+     <link rel="stylesheet" href="bootstrap-theme.min.css">
+
+     <script src="jquery-2.0.0.js" type="text/javascript"></script>
+     <script src="underscore-min.js" type="text/javascript"></script>
+     <script src="pixi-1.3.0.js" type="text/javascript"></script>
+     <script src="bootstrap.min.js"></script>
+
    </head>
 
    <div class="wrapper">
