--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,11 +9,16 @@
      <link rel=stylesheet type="text/css" href="main.css"></link>
      <link rel="stylesheet" href="bootstrap.min.css">
      <link rel="stylesheet" href="bootstrap-theme.min.css">
+     <link rel="stylesheet" href="animate.css">
+     <link rel="stylesheet" href="bootstrap-select.css">
 
      <script src="jquery-2.0.0.js" type="text/javascript"></script>
      <script src="underscore-min.js" type="text/javascript"></script>
      <script src="pixi-1.3.0.js" type="text/javascript"></script>
      <script src="bootstrap.min.js"></script>
+     <script src="bootstrap-select.js"></script>
+     <script src="jquery.textillate.js"></script>
+     <script src="jquery.lettering.js"></script>
 
    </head>
 
